[tool.poetry]
name = "transaction-analytics"
version = "0.1.0"
description = ""
authors = ["Anastasiya Nikolaeva <eritreya666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
mypy = "^1.12.0"
black = "^24.10.0"
isort = "^5.13.2"
lint = "^1.2.1"
pytest = "^8.3.3"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
